--- a/README
+++ b/README
@@ -6,9 +6,14 @@ SYSTEM REQUIREMENTS
 ===================
 This program requires ncurses version 4.2 or higher.  Earlier versions have
 been known to cause segmentation faults and/or odd display colors with this
-program.  ncurses may be obtained via:
+program.  ncurses may be obtained via anonymous FTP at:
 
-	https://www.gnu.org/software/ncurses/
+	prep.ai.mit.edu
+
+in the pub/gnu/ncurses subdirectory
+
+or:
+	http://www.gnu.org/software/ncurses/ncurses.html
 
 
 The Linux pthreads library is also required.  Both of these libraries are
@@ -22,7 +27,7 @@ is provided for all system users (such as /usr/src or /usr/local/src for
 Slackware Linux).  As root, move the tar file to such a directory and
 issue the command:
 
-	tar xvfz predict-2.2.4.tar.gz
+	tar xvfz predict-2.2.6.tar.gz
 
 to unpack the file.
 
@@ -44,10 +49,6 @@ other than /usr/local/bin is desired, invoke configure with the desired
 directory as an argument on the command line:
 
 	./configure /usr/bin
-
-NOTE: "configure" may stall if the system soundcard is in use.  Some
-window managers (sometimes KDE) take control of the soundcard, and prevent
-the configure script from opening /dev/dsp and checking its existence. 
 
 
 FIRST TIME USE
@@ -79,5 +80,5 @@ Happy Tracking!
 --
 John, KD2BD
 kd2bd@amsat.org
-March 2018
+May 2020
 
